<resources>
    <string name="app_name">Fragment</string>
    <string name="btnfragmentone">Fragment One</string>
    <string name="Btnfragmenttwo">FRAGMENT TWO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragmentone">Fragment One</string>
    <string name="fragmenttwo">Fragment Two</string>
    <string name="fragmentclickpractical">FRAGMENT CLICK PRACTICAL</string>
    <string name="thisisfirstfragment">This is First Fragment</string>
    <string name="fragmenttwoclick">Fragment Two</string>
    <string name="nextfragment">Next Fragment</string>
    <string name="thisissecondfragment">This is second Fragment</string>
    <string name="previousfragment">Previous Fragment</string>
    <string name="thisisthirdfragment">This is Third Fragment</string>
    <string name="Please_click_BACK_again_to_exit">Please click BACK again to exit</string>
    <string name="nameofaccount">Name of Account</string>
    <string name="settings">Settings</string>
    <string name="privacypolicy">privacy Policy</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="username">User Name</string>
    <string name="usernameM">User Name</string>
    <string name="thisisnameaccount">This is Name Account</string>
    <string name="thisisprivacypolicyfragment">This is Privacy Policy Fragment</string>
    <string name="thisissettingfragment">This is Setting Fragment</string>
    <string name="webview">Web View</string>
    <string name="testcheck">Test Check</string>
    <string name="account">Account</string>
    <string name="setting">Setting</string>
    <string name="privacy">Privacy Policy</string>
</resources>