<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gry"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment.FragmentActivityFraTwo"
    >

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.circularreveal.CircularRevealFrameLayout
            android:id="@+id/framlayoutClickActivityframetwo"
            android:layout_width="@dimen/dimens_0dp"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_marginTop="@dimen/dimens_250dp"
            android:id="@+id/textviewclickAcitivtytwo"
            android:layout_width="@dimen/dimens_0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center"
            android:text="@string/thisissecondfragment"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPreviousFragmenttwo"
            android:layout_width="@dimen/dimens_0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/btnNextFragmenttwo"
            android:text="@string/previousfragment"
            android:layout_marginStart="@dimen/dimens_30dp"
            android:layout_marginEnd="@dimen/dimens_30dp"
            android:layout_marginBottom="@dimen/dimens_50dp"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNextFragmenttwo"
            android:layout_width="@dimen/dimens_0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/nextfragment"
            android:layout_marginStart="@dimen/dimens_30dp"
            android:layout_marginEnd="@dimen/dimens_30dp"
            android:layout_marginBottom="@dimen/dimens_30dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>