<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:openDrawer="start">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/toobarlayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:navigationIcon="@drawable/drag_handle" />
        </com.google.android.material.appbar.AppBarLayout>

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="@dimen/dimens_0dp"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toTopOf="@id/btnfragmentone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnfragmentone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimens_30dp"
            android:layout_marginTop="@dimen/dimens_500dp"
            android:layout_marginEnd="@dimen/dimens_30dp"
            android:text="@string/btnfragmentone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnfragmenttwo"
            android:layout_width="@dimen/dimens_0dp"
            android:layout_height="wrap_content"
            android:text="@string/Btnfragmenttwo"
            app:layout_constraintEnd_toEndOf="@id/btnfragmentone"
            app:layout_constraintStart_toStartOf="@id/btnfragmentone"
            app:layout_constraintTop_toBottomOf="@id/btnfragmentone" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnfragmentNewActivity"
            android:layout_width="@dimen/dimens_0dp"
            android:layout_height="wrap_content"
            android:text="@string/fragmentclickpractical"
            app:layout_constraintEnd_toEndOf="@id/btnfragmenttwo"
            app:layout_constraintStart_toStartOf="@+id/btnfragmenttwo"
            app:layout_constraintTop_toBottomOf="@id/btnfragmenttwo" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigrationdrawer"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:layout_marginTop="@dimen/dimens_55dp">
        <include layout="@layout/nav_header"/>


    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>